# epsylon

./: .gitignore  epsylon.cabal  gore-and-ash-game.cabal  stack.yaml
shaders/: main.lc
shaders/UI/: Font.lc  Sprite.lc
src/client/: Consts.hs  Game.hs  Main.hs  Math.hs
src/client/Game/: Core.hs  Data.hs
src/client/Math/: Plane.hs  Triangulate.hs
src/client/Render/: Font.hs  Pipeline.hs  Sprite.hs  Texture.hs
src/server/: Game.hs  Main.hs
src/server/Game/: Chunk.hs  Data.hs  World.hs
src/server/Game/Chunk/: Data.hs
src/server/Game/World/: Biome.hs  Chunks.hs  Data.hs
src/server/Game/World/Chunks/: Data.hs
src/shared/: FPS.hs
src/shared/Data/: Range.hs
src/shared/Game/World/: Shared.hs
