name:                gore-and-ash-game
version:             0.1.0.0
synopsis:            Society simulation multiplayer game
description:         Please see README.md
homepage:            http://github.com/TeaspotStudio/gore-and-ash-game#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2016 Anton Gushcha
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable gore-and-ash-client
  hs-source-dirs:      src/client, src/shared
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:        base >= 4.7 && < 5
                      , gore-and-ash >= 1.1.0.1

executable gore-and-ash-server
  hs-source-dirs:      src/server, src/shared
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:        base >= 4.7 && < 5
                      , gore-and-ash >= 1.1.0.1