name:                gore-and-ash-game
version:             0.1.0.0
synopsis:            Society simulation multiplayer game
description:         Please see README.md
homepage:            http://github.com/TeaspotStudio/gore-and-ash-game#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2016 Anton Gushcha
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable gore-and-ash-client
  hs-source-dirs:      src/client, src/shared
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       
                      Consts
                      FPS
                      Game
                      Game.Core
                      Game.Data
                      Game.World.Shared
                      Render.Texture

  build-depends:        base >= 4.7 && < 5
                      , cereal >= 0.4.1.1
                      , deepseq >= 1.4.1.1
                      , exceptions >= 0.8.2.1
                      , gore-and-ash >= 1.1.0.1
                      , gore-and-ash-actor >= 1.1.0.0
                      , gore-and-ash-logging >= 1.1.0.0
                      , gore-and-ash-network >= 1.1.0.1
                      , gore-and-ash-sdl >= 1.1.0.1
                      , gore-and-ash-sync >= 1.1.0.0
                      , linear >= 1.20.3
                      , network >= 2.6.2.1
                      , text >= 1.2.2.0
                      , transformers >= 0.4.2.0
                      , StateVar >= 1.1.0.3

  default-extensions: 
                      Arrows
                      DataKinds 
                      DeriveGeneric
                      FlexibleContexts
                      GeneralizedNewtypeDeriving
                      MultiParamTypeClasses
                      OverloadedStrings
                      TupleSections
                      TypeFamilies
                      
  ghc-options: -Wall -threaded

executable gore-and-ash-server
  hs-source-dirs:      src/server, src/shared
  main-is:             Main.hs
  default-language:    Haskell2010

  other-modules:       
                      Data.Range
                      FPS
                      Game
                      Game.Chunk
                      Game.Chunk.Data
                      Game.Core
                      Game.Data
                      Game.World
                      Game.World.Biome
                      Game.World.Chunks
                      Game.World.Chunks.Data
                      Game.World.Data
                      Game.World.Shared

  build-depends:        base >= 4.7 && < 5
                      , cereal >= 0.4.1.1
                      , containers >= 0.5.6.2
                      , deepseq >= 1.4.1.1
                      , exceptions >= 0.8.2.1
                      , gore-and-ash >= 1.1.0.1
                      , gore-and-ash >= 1.1.0.1
                      , gore-and-ash-actor >= 1.1.0.0
                      , gore-and-ash-logging >= 1.1.0.0
                      , gore-and-ash-network >= 1.1.0.1
                      , gore-and-ash-sync >= 1.1.0.0
                      , hashable >= 1.2.4.0
                      , linear >= 1.20.3
                      , network >= 2.6.2.1
                      , repa >= 3.4.0.2
                      , text >= 1.2.2.0
                      , transformers >= 0.4.2.0
                      , unordered-containers >= 0.2.5.1
                      , vector >= 0.11.0.0
                      , yaml >= 0.8.15.2
                      
  default-extensions: 
                      Arrows
                      DataKinds 
                      DeriveGeneric
                      FlexibleContexts
                      GeneralizedNewtypeDeriving
                      MultiParamTypeClasses
                      OverloadedStrings
                      RecordWildCards
                      ScopedTypeVariables
                      TypeFamilies 

  ghc-options: -Wall -threaded